vlib/v/checker/tests/mut_array_get_element_address_err.out
vlib/v/checker/tests/mut_array_get_element_address_err.vv:3:17: error: cannot take the address of mutable array elements outside unsafe blocks
    1 | fn main() {
    2 |     mut arr_int := [int(23), 45, 7, 8]
    3 |     ele := &arr_int[1]
      |                    ~~~
    4 |     println(ele)
    5 | }
