vlib/v/checker/tests/mut_array_get_element_address_err.vv
fn main() {
    mut arr_int := [int(23), 45, 7, 8]
    ele := &arr_int[1]
    println(ele)
}
